--- a/idex.html
+++ b/idex.html
@@ -9,5 +9,7 @@
 <body>
     <h1>branch testing</h1>
     <h4>new destination</h4>
+   <img  src="pata.jpg" alt="" style="width:400px;height: 400px;"> 
+   
 </body>
 </html>
